[package]
name = "ethereum-bls12"
version = "0.1.1"
authors = ["schaeff <thibaut@schaeff.fr>"]
license = "Apache-2.0"
repository = "https://github.com/ewasm/ethereum-bls12.rs"
description = "Ethereum serialisation for BLS12-381 operations in Rust."
publish = false

[dependencies]
pairing = "0.14.2"
parity-bytes = { git = "https://github.com/paritytech/parity-common" }
rustc-hex = "1.0"